# qtarmsim

./: .bzrignore  .envrc  .gitignore  CHANGELOG.rst  DEVELOPMENT.rst  INSTALL  INSTALL.md  INSTALL.rst  LICENSE.rst  LICENSE.txt  MANIFEST.in  Makefile  README  README.md  README.rst  TODO  ay.py  ayuda.py  ayuda.ui  br.py  breakpo.py  co.py  cons_rc.py  consola.py  default.nix  ej.py  ejec.py  fake_armsim.py  im.py  imprimir.py  imprimir.ui  mu.py  multi.py  op.py  opciones.py  post_install.py  prin_rc.py  principal.py  principal2.py  pyproject.toml  (+11 more)
armsim/: coder.rb  core.rb  instruction.rb  main_Window.rb  memory.rb  memory_Defs.rb  memory_block.rb  read_ELF.rb  server.rb  thumbII_Defs.rb  window.rb
build_scripts/: generate_assets.py
dictionary/: Ayuda.html  Dibujo.tif  Opciones.tif  reg.txt  text.txt
distfiles/: libqscintilla2.so.9
doc/: DEVELOPER_DOC.md
doc/grammar/: c  grammar.tex
docs/: .envrc  CHANGELOG.rst  DEVELOPER_DOC.md  DEVELOPMENT.rst  INSTALL.rst  LICENSE.rst  TODO
docs/grammar/: grammar.tex
examples/: add.s  add_w_ldr.s  condC.c  hello_world.s  loop.s  maxC.c  prbits.s  reg_copy.s  subrutina-dos-latin1.s  subrutina-dos-utf8.s  subrutina-unix-latin1.s  subrutina-unix-utf8.s  testQfp.s  test_firmware.s  testbench.s
languages/: qtarmsim_es.ts
misc/: wininst_banner.xcf
misc/examples/: progress_bar.py
nix-env/: qtarmsim-fhs.nix
qtarmsim/: Makefile  __init__.py  mainwindow.py  modulepath.py  qtarmsim.py  utils.py  version.py
qtarmsim/armsim/: Firmware.s  FirmwareAPI.txt  LICENSE.txt  coder.rb  core.rb  instruction.rb  main_Window.rb  memory.rb  memory_Defs.rb  read_ELF.rb  server.rb  thumbII_Defs.rb
qtarmsim/comm/: armsimconnector.py  exceptions.py  mysocket.py  responses.py
qtarmsim/gcc-arm/: README.html  README.rst  README.rst~
qtarmsim/html/: Ayuda.html  Help.html
qtarmsim/lang/: qtarmsim_es.ts
qtarmsim/model/: common.py  memorybywordproxymodel.py  memorydumpproxymodel.py  memorylcdproxymodel.py  memorymodel.py  registersmodel.py  simpletreemodel.py
qtarmsim/res/: console.qrc  main.qrc
qtarmsim/stylesheets/: lightblue.css
qtarmsim/test/: fake_armsim.py  test_armsim.py
qtarmsim/ui/: consola.ui  mainwindow.ui  multi.ui  opciones.ui  preferences.ui  settings.ui
qtarmsim/widget/: armcodeeditor.py  armsyntaxhighlighter.py  codeeditor.py  commonsyntaxhighlighter.py  csyntaxhighlighter.py  memorylcdview.py  myqtreeview.py  qscilexerarm.py  simplearmeditor.py
qtarmsim/window/: br.py  co.py  connectprogressbardialog.py  ej.py  help.py  im.py  mu.py  op.py  preferencesdialog.py  runprogressbardialog.py  settingsdialog.py  va.py
resources/: cons.qrc  main.qrc  prin.qrc
resources/dictionary/: Ayuda.html  Ayuda.txt  data.txt
src/: armsimconnector.py  br.py  co.py  hello_world.asm  help.py  im.py  memorymodel.py  mu.py  myqtableview.py  myqtreeview.py  mysocket.py  op.py  qscilexerarm.py  registersmodel.py  settingsdialog.py  simplearmeditor.py  simpletreemodel.py  tablemodelmemory.py  tablemodelregisters.py  treemodelregisters.py  va.py
src/qtarmsim/: __init__.py  mainwindow.py  modulepath.py  post_install.py  qtarmsim.pro  utils.py
test/: add.s  fake_armsim.py  mysocket.py  test_armsim.py
ui/: breakpo.ui  ejec.ui  help.ui  mainwindow.ui  principal2.ui  settings.ui  value.ui
(+45 files in other folders)
